--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ing.software-proyecto",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -9,17 +9,9 @@
     "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Karen-Calderon08/Ing.Software-Proyecto.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Karen-Calderon08/Ing.Software-Proyecto/issues"
-  },
-  "homepage": "https://github.com/Karen-Calderon08/Ing.Software-Proyecto#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
