--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+        "browser": true,
         "es2021": true,
         "node": true
     },
@@ -11,5 +12,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "space-before-function-paren": "off"
     }
 }
