--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.js",
     "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,16 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   },
+  "jest": {
+    "transform": {}
+  },
   "devDependencies": {
-    "prisma": "^5.13.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "prisma": "^5.13.0",
+    "superagent": "^9.0.2",
+    "supertest": "^7.0.0"
   }
 }
