--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "zod": "^3.23.8"
   }
 }
