--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.js",
     "start": "node ./src/index.js",
+    "prisma:push": "prisma db push",
     "test": "node --experimental-vm-modules --no-warnings ../node_modules/jest/bin/jest.js"
   },
   "keywords": [],
