--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev --w=frontend\" \"npm run dev --w=backend\"",
+    "dev:backend":  "npm run dev --w=backend",
+    "dev:frontend":  "npm run dev --w=rfontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
