--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   }
 }
