--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev --w=frontend\" \"npm run dev --w=backend\"",
     "dev:backend": "npm run dev --w=backend",
-    "dev:frontend": "npm run dev --w=rfontend",
+    "dev:frontend": "npm run dev --w=frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
