--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:backend": "npm run dev --w=backend",
     "dev:frontend": "npm run dev --w=frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build --w=frontend && npm run start --w=backend"
+    "start": "npm run start --w=backend",
+    "build": "npm run build --w=frontend"
   },
   "repository": {
     "type": "git",
