--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version": 2,
+  "version": "2",
   "builds": [
     {
-      "src": "backend/src/index.js",
+      "src": "./backend/src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "backend/src/index.js"
+      "dest": "/backend/src/index.js"
     }
   ]
 }
