--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "./backend/src/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "./frontend/dist/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
